--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,9 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    ".next/types/**/*.ts"
+    ".next/types/**/*.ts",
+    "app/api/schedule/today/[id]/__tests__/route.test.ts",
+    "app/api/schedule/today/__tests__/getNthWeekdayInThisMonth.test.js"
   ],
   "exclude": ["node_modules"]
 }
