--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,8 +26,8 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "app/api/schedule/today/[id]/__tests__/route.test.ts",
-    "app/api/schedule/today/__tests__/getNthWeekdayInThisMonth.test.js"
+    "app/api/schedule/[id]/today/[id]/__tests__/route.test.ts",
+    "app/api/schedule/[id]/today/__tests__/getNthWeekdayInThisMonth.test.js"
   ],
   "exclude": ["node_modules"]
 }
